--- a/Practice/App/Code/app/src/main/res/layout/activity_home.xml
+++ b/Practice/App/Code/app/src/main/res/layout/activity_home.xml
@@ -7,13 +7,10 @@
     android:orientation="vertical"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/characters"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/amiibo_list"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+    <ListView
+        android:id="@+id/charactersList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 </RelativeLayout>
