--- a/Practice/App/Code/app/src/main/res/layout/activity_home.xml
+++ b/Practice/App/Code/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,8 @@
     <ListView
         android:id="@+id/charactersList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#2196F3" />
 
 
 </RelativeLayout>
