--- a/Practice/App/Code/app/src/main/res/layout/activity_amiibo_info_activity.xml
+++ b/Practice/App/Code/app/src/main/res/layout/activity_amiibo_info_activity.xml
@@ -73,5 +73,17 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/goBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dataRelease"
+        android:layout_alignParentStart="true"
+        android:backgroundTint="#19ADDB"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginBottom="10dp"
+        android:text="Go Back" />
+
 
 </RelativeLayout>
